--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="item_title_locate">Locate</string>
 
     <string name="text_location">Lat: %1$f - Lon: %2$f</string>
+
+    <string name="progress_dialog_message">Fetching location…</string>
 </resources>
