New feature: Show additional information for BTS and IP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,12 @@
     <string name="item_title_locate">Locate</string>
 
     <string name="text_location">Lat: %1$f - Lon: %2$f</string>
-    <string name="text_location_extra">Lat: %1$f - Lon: %2$f\nAltitude: %3$f - Speed: %4$f - Mock: %5$s</string>
+    <string name="text_location_android">Lat: %1$f - Lon: %2$f\nAltitude: %3$f - Speed: %4$f\nMock: %5$s</string>
+    <string name="text_location_ip">Lat: %1$f - Lon: %2$f\nISP: %3$s\nAS: %4$s</string>
+    <string name="text_location_bts">Lat: %1$f - Lon: %2$f\nMCC: %3$d - MNC: %4$d - TAC: %5$d - CI: %6$d</string>
+
+    <string name="text_yes">Yes</string>
+    <string name="text_no">No</string>
 
     <string name="progress_dialog_message">Fetching location…</string>
 </resources>
